# inventory-management-python

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/inventory_management_python/: __main__.py
src/inventory_management_python/database/: __init__.py  user.py
src/inventory_management_python/routes/: __init__.py  auth.py
tests/: test_user_repository.py
