[project]
name = "inventory-management-python"
version = "0.1.0"
description = ""
authors = [{ name = "karlrobeck", email = "karlalferezfx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard] (>=0.115.12,<0.116.0)",
  "sqlalchemy (>=2.0.40,<3.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "passlib[bcrypt] (>=1.7.4,<2.0.0)",
  "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
packages = [{ include = "inventory_management_python", from = "src" }]

[tool.poetry.scripts]
backend = "inventory_management_python.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "PIE", "PYI", "RET", "SIM", "TID"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=xml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
